--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -263,22 +263,22 @@
                   = f.radio_button :use_entered_address, true
                   Enter address manually
 
-            .address-fields.related-fields.collapse
-              .form-group.ifManualRequired
+            .form-group.address-group.related-fields.collapse
+              .ifManualRequired
                 = f.text_field :street, placeholder: t(".address_or_intersection"), class: "form-control"
 
-              .form-group.ifManualRequired
+              .ifManualRequired
                 = f.text_field :city, placeholder: t(".city"), class: "form-control"
 
-              .form-group
-                = f.text_field :zipcode, placeholder: t(".zipcode"), class: "form-control"
-
-              .form-group.fancy-select-placeholder.unfancy.hidden-other{ class: (@parking_notification.country_id == Country.united_states.id ? "unhidden" : "") }
-                = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
-              .form-group.fancy-select.unfancy.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
-                = f.select(:country_id, Country.select_options,
-                  { prompt: t(".choose_country") },
-                  { class: 'country-select-input form-control' } )
+              .row.countrystatezip
+                .col-sm-4.fancy-select.unfancy.no-restore-on-backspace.hidden-other{ class: (@parking_notification.country_id == Country.united_states.id ? "unhidden" : "") }
+                  = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
+                .col-sm-4.fancy-select.unfancy.no-restore-on-backspace.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
+                  = f.select(:country_id, Country.select_options,
+                    { prompt: t(".choose_country") },
+                    { class: 'country-select-input form-control' } )
+                .col-sm-4
+                  = f.text_field :zipcode, placeholder: t(".zipcode"), class: "form-control"
           .col-md-6
             .form-group.less-strong
               = f.label :internal_notes, t(".parking_notification_notes_html", org_name: passive_organization.short_name)
