--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -177,9 +177,9 @@
             .card-title
               %h3.uncap
                 - if @parking_notification.send_email?
-                  Send additional notification
+                  Send follow up notification
                 - else
-                  Create additional notification
+                  Create follow up notification
                 or mark retrieved
             .card-body
               -# Matching form is on parking notification index
