--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -46,16 +46,16 @@
             %span.extended-col-info.d-block
               = link_to organized_bike_text(parking_notification.bike), bike_path(parking_notification.bike)
 
-          - if parking_notification.impounded_at.present?
+          - if parking_notification.resolved_at.present?
             %strong.small.extended-col-info.d-block
               Impounded:
               %span.convertTime.preciseTime
-                = l(parking_notification.impounded_at, format: :convert_time)
-          - if parking_notification.retrieved_at.present?
+                = l(parking_notification.resolved_at, format: :convert_time)
+          - if parking_notification.resolved_at.present?
             %strong.small.extended-col-info.d-block
               Retrieved:
               %span.convertTime.preciseTime
-                = l(parking_notification.retrieved_at, format: :convert_time)
+                = l(parking_notification.resolved_at, format: :convert_time)
 
         - if render_address
           %td.hidden-sm-cells
@@ -74,13 +74,13 @@
             - if parking_notification.repeat_record?
               = parking_notification.notification_number
         %td.hidden-sm-cells
-          - if parking_notification.impounded_at.present?
+          - if parking_notification.resolved_at.present?
             %span.convertTime.preciseTime
-              = l(parking_notification.impounded_at, format: :convert_time)
+              = l(parking_notification.resolved_at, format: :convert_time)
         %td.hidden-sm-cells
-          - if parking_notification.retrieved_at.present?
+          - if parking_notification.resolved_at.present?
             %span.convertTime.preciseTime
-              = l(parking_notification.retrieved_at, format: :convert_time)
+              = l(parking_notification.resolved_at, format: :convert_time)
         - unless skip_multiselect
           %td.multiselect-cell.table-cell-check.collapse
             = check_box_tag "ids[#{parking_notification.id}]", parking_notification.id
