wip, additional diagnostics

--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -21,7 +21,8 @@
 @import "../stylesheets/tweets";
 
 // Specific section styles
-@import "../stylesheets/admin";
+@import "../stylesheets/admin/general";
+@import "../stylesheets/admin/bikes";
 @import "../stylesheets/period_selection";
 
 // Uppy Styles
