let's see what this breaks

--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -234,7 +234,7 @@
             %td Coordinates
             %td
               %code
-                = @bike.coordinates
+                = @bike.to_coordinates
           %tr
             %td
               Address
