--- a/app/views/bikes/edit_bike_details.html.haml
+++ b/app/views/bikes/edit_bike_details.html.haml
@@ -87,8 +87,8 @@
             .form-well-input
               = f.text_field :extra_registration_number, class: 'form-control'
 
-          -# Only show the bike location fields if they won't be overridden by one of bike's associations
-          - unless @bike.location_record.present?
+          -# Only show the bike location fields if the bike isn't stolen
+          - unless @bike.current_stolen_record.present?
             .related-fields.no-divider-row
               .form-group.row.fancy-select-placeholder.unfancy
                 = f.label :country_id, class: 'form-well-label'
