--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,12 +46,11 @@
                   %li
                     = active_link "#{passive_organization.short_name} dashboard", organization_dashboard_index_path(organization_id: passive_organization.to_param), class: "nav-link"
                 - on_bikes_path = controller_name == "bikes" && action_name == "index" # Because we want to ignore queries and stuff
-                - on_impound_bikes_path = on_bikes_path && params[:search_impoundedness] == "only_impounded"
                 %li
-                  = link_to t(".org_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param), class: "nav-link #{(on_bikes_path && !on_impound_bikes_path) ? 'active' : ''}"
+                  = link_to t(".org_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param), class: "nav-link #{on_bikes_path ? 'active' : ''}"
                 - if passive_organization.enabled?("impound_bikes")
                   %li
-                    = link_to t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param, search_impoundedness: "only_impounded"), class: "nav-link #{on_impound_bikes_path ? 'active' : ''} secondary-item"
+                    = active_link t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_impound_records_path(organization_id: passive_organization.to_param), class: "nav-link secondary-item"
                 - if passive_organization.enabled?("show_partial_registrations")
                   %li
                     = active_link t(".incomplete_registrations"), incompletes_organization_bikes_path(passive_organization.to_param), class: "nav-link secondary-item"
