--- a/app/views/admin/paid_features/_form.html.haml
+++ b/app/views/admin/paid_features/_form.html.haml
@@ -22,7 +22,7 @@
       .col-md-6
         %label.d-none.d-md-block &nbsp;
         %small.less-strong
-          Used slugs:
+          Permitted slugs:
           - PaidFeature::EXPECTED_SLUGS.sort.each do |slug|
             %code
               = slug
