--- a/app/views/admin/paid_features/index.html.haml
+++ b/app/views/admin/paid_features/index.html.haml
@@ -12,7 +12,7 @@
 .full-screen-table
   %table.table.table-striped.table-bordered
     %thead.thead-light
-      %th
+      %th.small
         = sortable "created_at", "Added"
       %th
         = sortable "name"
@@ -24,7 +24,7 @@
       - @paid_features.each do |paid_feature|
         %tr
           %td
-            %span.convertTime
+            %small.convertTime
               = l paid_feature.created_at, format: :convert_time
           %td
             = link_to paid_feature.name, edit_admin_paid_feature_url(paid_feature)
@@ -34,12 +34,14 @@
             - if paid_feature.details_link.present?
               %br
               %small= link_to paid_feature.details_link, paid_feature.details_link
-            %br
-            %small.less-strong
-              %span
-                Feature slugs:
-                %span{style: "color: purple;"}
-                  = paid_feature.feature_slugs_string
+
+            - if paid_feature.feature_slugs_string.present?
+              %br
+              %small.less-strong
+                %span
+                  Feature slugs:
+                  %span{style: "color: purple;"}
+                    = paid_feature.feature_slugs_string
 
           %td
             %small
