--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -29,27 +29,8 @@
 
 %hr{ style: "opacity: .3;" }
 
-%p.mt-4
-  - if @search_query_present || params[:search_stickers].present?
-    = t(".matching_bikes_html", bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")))
-  - else
-    = t(".registered_bikes_html",
-    bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")),
-    org_name: current_organization.short_name)
-
-  - search_params = @interpreted_params.merge(organization_id: current_organization.to_param)
-  - unless skip_view_just_stolen
-    - if @stolenness == 'all'
-      %a.float-right.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'stolen')), data: { stolenness: 'stolen' } }
-        = t(".view_just_stolen_bikes")
-    - else
-      = t(".stolen_bikes_html")
-      %a.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'all')), data: { stolenness: 'all' } }
-        = t(".view_all_bikes")
-  %a.float-right.less-strong{ href: "#organizedSearchSettings", "aria-controls" => "organizedSearchSettings", "data-toggle" => "collapse", style: "margin: 0 .5rem; color: #bbb" }
-    = t(".settings")
-
 :ruby
+  search_params = @interpreted_params.merge(organization_id: current_organization.to_param)
   # TODO: Now that we have translations, we need to localize this. I believe the easiest way to do so would be to pull the text from the header cell and use that.
   column_renames = {
     "created_at_cell" => "Registered",
@@ -102,6 +83,25 @@
         = t(".only_with_stickers_html")
       = link_to organization_bikes_path(search_params.merge(search_stickers: "none")), class: "btn btn-secondary #{@search_stickers == 'none' ? 'active' : ''}" do
         = t(".only_no_sticker_html")
+
+%p.mt-4
+  - if @search_query_present || params[:search_stickers].present?
+    = t(".matching_bikes_html", bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")))
+  - else
+    = t(".registered_bikes_html",
+    bikes: pluralize(number_with_delimiter(@bikes.total_count), t(".bike")),
+    org_name: current_organization.short_name)
+
+  - unless skip_view_just_stolen
+    - if @stolenness == 'all'
+      %a.float-right.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'stolen')), data: { stolenness: 'stolen' } }
+        = t(".view_just_stolen_bikes")
+    - else
+      = t(".stolen_bikes_html")
+      %a.organized-bikes-stolenness-toggle{ href: organization_bikes_path(search_params.merge(stolenness: 'all')), data: { stolenness: 'all' } }
+        = t(".view_all_bikes")
+  %a.float-right.less-strong{ href: "#organizedSearchSettings", "aria-controls" => "organizedSearchSettings", "data-toggle" => "collapse", style: "margin: 0 .5rem; color: #bbb" }
+    = t(".settings")
 
 .full-screen-table
   %table.table.table-striped.table-hover.table-bordered.table-sm.without-exterior-border
